--- a/index.html
+++ b/index.html
@@ -90,9 +90,162 @@
             </section>
 
             <section class="default dark">
-                <div class="section-title">titulo section</div>
-                <div class="section-desc">Descrição section</div>
-                <div class="section-body">...</div>
+                <div class="section-title">Services</div>
+                <div class="section-desc">services that we provide</div>
+                <div class="section-body">
+                    <div class="section-services">
+                        <div class="section-service">
+                            <img src="assets/image/medalha.png" alt="" />
+                            <h4>High Quality Design</h4>
+                            <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                        </div>
+                        <div class="section-service">
+                            <img src="assets/image/estrela.png" alt="" />
+                            <h4>Modern Design</h4>
+                            <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                        </div>
+                        <div class="section-service">
+                            <img src="assets/image/relogio.png" alt="" />
+                            <h4>Regular Updates</h4>
+                            <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                        </div>
+                        <div class="section-service">
+                            <img src="assets/image/balao.png" alt="" />
+                            <h4>Fast and Free Support</h4>
+                            <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="default light">
+                <div class="section-title">Our Projects</div>
+                <div class="section-desc">What we create</div>
+                <div class="section-body">
+                    <div class="section-projects">
+                        <div class="section-projects--filters">
+                            <ul>
+                                <li>All</li>
+                                <li class="active">Photos</li>
+                                <li>Branding</li>
+                                <li>Adverts</li>
+                                <li>Development</li>
+                                <li>Misc</li>
+                            </ul>
+                        </div>
+                        <div class="section-projects--photos">
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto1.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto2.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto3.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto4.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto5.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto6.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto7.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto8.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto9.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto10.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto11.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="section-projects--photo">
+                                <div class="section-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>ABOUT</h5>
+                                        <p>Praesent luctus lacus pellentesque purus iaculis</p>
+                                    </div>
+                                    <img src="media/foto12.jpg" alt="" />
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#" class="button">More Projects</a>
+                    </div>
+                </div>
             </section>
         </main>
         <footer>
