Section - Facts e Share

--- a/index.html
+++ b/index.html
@@ -693,6 +693,76 @@
           </div>
         </div>
       </section>
+
+			<section class="default dark">
+				<div class="section-title">Some Facts</div>
+				<div class="section-desc">About our work</div>
+				<div class="section-body">
+					<div class="section-facts">
+						<div class="section-fact">
+							<h3>1000</h3>
+							<div class="section-fact-line"></div>
+							<h4>Design Projects Released</h4>
+							<p>Maxime harum quam animi dicta sapiente ratione itaque, facilis consectetur?</p>
+						</div>
+						<div class="section-fact">
+							<h3>900</h3>
+							<div class="section-fact-line"></div>
+							<h4>Photos</h4>
+							<p>Maxime harum quam animi dicta sapiente ratione itaque, facilis consectetur?</p>
+						</div>
+						<div class="section-fact">
+							<h3>500</h3>
+							<div class="section-fact-line"></div>
+							<h4>Marketing Ideas</h4>
+							<p>Maxime harum quam animi dicta sapiente ratione itaque, facilis consectetur?</p>
+						</div>
+						<div class="section-fact">
+							<h3>100</h3>
+							<div class="section-fact-line"></div>
+							<h4>Exhibitions</h4>
+							<p>Maxime harum quam animi dicta sapiente ratione itaque, facilis consectetur?</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="section-share">
+				<div class="section-share--legend">
+					<img src="assets/image/share.png" alt="" />
+					Tell About Us:
+				</div>
+				<div class="section-share--item">
+					<div class="section-share--icon twitter">
+						<img src="assets/image/twitter.png" alt="" />
+					</div>
+					152
+				</div>
+				<div class="section-share--item">
+					<div class="section-share--icon linkedin">
+						<img src="assets/image/linkedin.png" alt="" />
+					</div>
+					31
+				</div>
+				<div class="section-share--item">
+					<div class="section-share--icon facebook">
+						<img src="assets/image/facebook.png" alt="" />
+					</div>
+					165
+				</div>
+				<div class="section-share--item">
+					<div class="section-share--icon googleplus">
+						<img src="assets/image/googleplus.png" alt="" />
+					</div>
+					22
+				</div>
+				<div class="section-share--item">
+					<div class="section-share--icon pinterest">
+						<img src="assets/image/pinterest.png" alt="" />
+					</div>
+					165
+				</div>
+			</section>
     </main>
     <footer></footer>
   </body>
