Finalizando o site - não responsivo

--- a/index.html
+++ b/index.html
@@ -763,7 +763,104 @@
 					165
 				</div>
 			</section>
+
+			<section class="default light">
+				<div class="section-title">Contact Us</div>
+				<div class="section-desc">
+					Our Agency Located in Melbourne, Australia
+				</div>
+				<div class="section-body">
+					<div class="section-contact">
+						<form method="POST">
+							<div class="section-contact--split">
+								<input type="text" name="name" placeholder="NAME" />
+								<input type="text" name="email" placeholder="EMAIL" />
+							</div>
+							<input type="text" name="subject" placeholder="SUBJECT" />
+							<textarea name="message" placeholder="MESSAGE"></textarea>
+							<input type="submit" value="Send Message" class="button" />
+						</form>
+					</div>
+				</div>
+			</section>
+
+			<section class="section-map">
+				<div class="section-map--area">
+					<div class="section-map--info">
+						<div class="section-map--info-item">
+							<div class="section-map--info-item-img">
+								<img 
+									src="assets/image/carta.png" 
+									alt="" 
+								/>
+							</div>
+							Endereço completo da empresa
+						</div>
+						<div class="section-map--info-item">
+							<div class="section-map--info-item-img">
+								<img 
+									src="assets/image/localizacao.png" 
+									alt="" 
+								/>
+							</div>
+							Localização completa da empresa
+						</div>
+						<div class="section-map--info-item">
+							<div class="section-map--info-item-img">
+								<img 
+									src="assets/image/telefone.png" 
+									alt="" 
+								/>
+							</div>
+							Telefone da empresa
+						</div>
+						<div class="section-map--info-item">
+							<div class="section-map--info-item-img">
+								<img 
+									src="assets/image/arroba.png" 
+									alt="" 
+								/>
+							</div>
+							E-mail da empresa
+						</div>
+						<div class="section-map--info-item">
+							<div class="section-map--info-item-img">
+								<img 
+									src="assets/image/web.png" 
+									alt="" 
+								/>
+							</div>
+							site da empresa
+						</div>
+					</div>
+				</div>
+			</section>
     </main>
-    <footer></footer>
+    <footer>
+			<div class="footer--area">
+				<div class="footer--item area1">
+					<div class="footer-social">
+						<a href=""><img src="assets/image/twitter.png" alt="" /></a>
+						<a href=""><img src="assets/image/linkedin.png" alt="" /></a>
+						<a href=""><img src="assets/image/facebook.png" alt="" /></a>
+						<a href=""><img src="assets/image/googleplus.png" alt="" /></a>
+						<a href=""><img src="assets/image/pinterest.png" alt="" /></a>
+					</div>
+				</div>
+				<div class="footer--item area2">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique neque, sunt debitis sit sint, voluptatem repellat, asperiores fugiat dignissimos aspernatur necessitatibus rem! Ullam dolores temporibus voluptas explicabo itaque inventore animi!
+				</div>
+				<div class="footer--item area3">
+					<form method="POST">
+						<input 
+							type="email" 
+							nome="email" 
+							placeholder="EMAIL TO SUBSCRIBE" 
+						/>
+						<button class="button">Subscribe</button>
+					</form>
+				</div>
+			</div>
+		</footer>
   </body>
 </html>
