--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,minimum-scale=1, initial-scale=1" />
     <title>LandingPage - Awax</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
   </head>
@@ -12,6 +13,7 @@
           <div class="logoimg"></div>
         </div>
         <div class="menu">
+          <img class="menu-opener" src="assets/image/menu.png" alt="" />
           <nav>
             <ul>
               <li class="active"><a href="#">Home</a></li>
